adjust card header on finalium dark

--- a/templates/default/cheatsheet.twig
+++ b/templates/default/cheatsheet.twig
@@ -177,6 +177,9 @@
               <button type="button" class="btn btn-danger">Danger</button>
               <button type="button" class="btn btn-light">Light</button>
               <button type="button" class="btn btn-dark">Dark</button>
+              <button type="button" class="btn btn-violet">Violet</button>
+              <button type="button" class="btn btn-pale-green">Pale green</button>
+              <button type="button" class="btn btn-carrot">Carrot</button>
               <button type="button" class="btn btn-link">Link</button>
             </p>
 
@@ -189,6 +192,9 @@
               <button type="button" class="btn btn-danger disabled">Danger</button>
               <button type="button" class="btn btn-light disabled">Light</button>
               <button type="button" class="btn btn-dark disabled">Dark</button>
+			  <button type="button" class="btn btn-violet disabled">Violet</button>
+              <button type="button" class="btn btn-pale-green disabled">Pale green</button>
+              <button type="button" class="btn btn-carrot disabled">Carrot</button>
               <button type="button" class="btn btn-link disabled">Link</button>
             </p>
 
@@ -201,6 +207,9 @@
               <button type="button" class="btn btn-outline-danger">Danger</button>
               <button type="button" class="btn btn-outline-light">Light</button>
               <button type="button" class="btn btn-outline-dark">Dark</button>
+			  <button type="button" class="btn btn-outline-violet">Violet</button>
+              <button type="button" class="btn btn-outline-pale-green">Pale green</button>
+              <button type="button" class="btn btn-outline-carrot">Carrot</button>
             </p>
 
             <div class="bs-component">
@@ -1003,6 +1012,9 @@
             <span class="badge bg-info">Info</span>
             <span class="badge bg-light">Light</span>
             <span class="badge bg-dark">Dark</span>
+            <span class="badge bg-violet">Violet</span>
+            <span class="badge bg-pale-green">Pale green</span>
+            <span class="badge bg-carrot">Carrot</span>
           </div>
           <div class="bs-component">
             <span class="badge rounded-pill bg-primary">Primary</span>
@@ -1013,6 +1025,9 @@
             <span class="badge rounded-pill bg-info">Info</span>
             <span class="badge rounded-pill bg-light">Light</span>
             <span class="badge rounded-pill bg-dark">Dark</span>
+            <span class="badge rounded-pill bg-violet">Violet</span>
+            <span class="badge rounded-pill bg-pale-green">Pale green</span>
+            <span class="badge rounded-pill bg-carrot">Carrot</span>
           </div>
         </div>
       </div>
@@ -1221,6 +1236,27 @@
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
+              <div class="card text-white bg-violet mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h4 class="card-title">Violet card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+              <div class="card text-white bg-pale-green mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h4 class="card-title">Pale green card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+              <div class="card text-white bg-carrot mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h4 class="card-title">Carrot card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-lg-4">
@@ -1278,6 +1314,27 @@
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h4 class="card-title">Dark card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+              <div class="card border-violet mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h4 class="card-title">Violet card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+              <div class="card border-pale-green mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h4 class="card-title">Pale green card title</h4>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+              <div class="card border-carrot mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                <div class="card-body">
+                  <h4 class="card-title">Carrot card title</h4>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
