--- a/bootstrap/_variables-finalium-dark.scss
+++ b/bootstrap/_variables-finalium-dark.scss
@@ -129,7 +129,7 @@ $pagination-disabled-border-color:  transparent !default;
 
 // Cards
 
-$card-cap-bg:                       $gray-700 !default;
+$card-cap-bg:                       rgba($gray-700, .25) !default;
 $card-bg:                           $gray-800 !default;
 
 // Popovers
