--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -72,19 +72,15 @@
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 				<ul class="navbar-nav">
 					{% if logged_in %}
-					<div class="dropdown">
+					<!-- can't put dropdown-toggle properly wtf -->
 						<li class="nav-item">
 							<a href="upload.php" class="nav-link">
 								<div class="d-flex align-items-center">
-									<div class="flex-grow-1 pe-1">
-										{{ icon('plus', 24) }}
-									</div>
+									{{ icon('plus', 24) }}
 									<span class="pe-1">{{ __("Upload") }}</span>
-									{{ icon('caret-down-fill', 8) }}
 								</div>
 							</a>
 						</li>
-					</div>
 					{% else %}
 					<div class="d-grid gap-2 d-md-block">
 						<a href="login.php" class="btn btn-primary me-md-1">{{ __("Login") }}</a>
@@ -94,10 +90,6 @@
 					<div class="dropdown">
 						<li class="nav-item">
 							<style>
-								#openSettings::after {
-									content: none;
-								}
-
 								#openSettings.nav-link {
 									padding: 0.25rem;
 								}
@@ -105,7 +97,7 @@
 							<a href="#" id="openSettings" class="dropdown-toggle nav-link" data-bs-toggle="dropdown"
 								aria-expanded="false">
 								{% if logged_in %} <img src="{{ profile_image(current_user.username) }}"
-									alt="{{ current_user.username }}" class="rounded" width="30" height="30">{{ icon('caret-down-fill', 14) }}
+									alt="{{ current_user.username }}" class="rounded" width="30" height="30">
 								{% else %}{{ icon('three-dots-vertical', 30) }}{% endif %}
 							</a>
 						</li>
