--- a/templates/default/components/browsechannelbox.twig
+++ b/templates/default/components/browsechannelbox.twig
@@ -3,7 +3,7 @@
 		<div class="row"><a href="user.php?name={{ data.username }}">
 			<div class="col-lg-12" style="margin-bottom:15px">
 				<div class="img-thumbnail">
-					<img class="img-fluid" src="{{ profile_image(data.username) }}">
+					<img class="img-fluid rounded-circle" src="{{ profile_image(data.username) }}">
 				</div>
 			</div>
 			<div class="col-lg-12">
