--- a/templates/default/login.twig
+++ b/templates/default/login.twig
@@ -16,7 +16,7 @@
 		<form method="post" name="loginForm" id="loginForm" action="login.php">
 			<img class="mb-2" src="/assets/logo_border_placeholder.png" alt="squareBracket" width="90">
 			<div class="login-box">
-			<h3 class="mb-4 text-light">{{ __("Login") }}</h3>
+			<h3 class="mb-4 text-white">{{ __("Login") }}</h3>
 				<div class="card">
 					<div class="card-body">
 						<div class="form-floating my-2">
@@ -33,8 +33,8 @@
 						</div>
 					</div>
 				</div>
-			<p class="mt-2 text-light">{{ __("Account passwords are hashed with bcrypt.") }}</p>
-			<p class="mt-5 mb-3 text-light">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
+			<p class="mt-2 text-white">{{ __("Account passwords are hashed with bcrypt.") }}</p>
+			<p class="mt-5 mb-3 text-white">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
 			</div>
 		</form>
 </main>
