--- a/templates/default/settings_redesign.twig
+++ b/templates/default/settings_redesign.twig
@@ -6,7 +6,7 @@
 <div class="row">
 					<div class="row">
 						<div class="col-12">
-							<img class="float-start rounded" src="{{ profile_image(current_user.username) }}" style="margin-right: 1.5%;" width="64" alt="pfp">
+							<img class="float-start rounded-circle" src="{{ profile_image(current_user.username) }}" style="margin-right: 1.5%;" width="64" alt="pfp">
 							<h2>{{ current_user.display_name }}</h2>
 							<p>Your squareBracket account (or channel?)</p>
 						</div>
