--- a/templates/default/watch.twig
+++ b/templates/default/watch.twig
@@ -76,7 +76,7 @@
 							<div class="row">
 								<div class="col-lg-2" style="width:10%;padding-right:0">
 									<a href="user.php?name={{ video.u_username }}">
-										<img class="float-start rounded w-100" src="{{ profile_image(video.u_username) }}">
+										<img class="float-start rounded-circle w-100" src="{{ profile_image(video.u_username) }}">
 									</a>
 								</div>
 								<div class="col-lg-10">
