--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -97,7 +97,7 @@
 							<a href="#" id="openSettings" class="dropdown-toggle nav-link" data-bs-toggle="dropdown"
 								aria-expanded="false">
 								{% if logged_in %} <img src="{{ profile_image(current_user.username) }}"
-									alt="{{ current_user.username }}" class="rounded" width="30" height="30">
+									alt="{{ current_user.username }}" class="rounded-circle" width="30" height="30">
 								{% else %}{{ icon('three-dots-vertical', 30) }}{% endif %}
 							</a>
 						</li>
@@ -150,6 +150,7 @@
 			<div class="card-body">
 			<h4 class="my-0">squareBracket Beta 1.1</h4>
 			<!-- 2020 was when work on PokTube (the predecessor of squareBracket) was started. Techically, PokTube and squareBracket are the same project, just with different codebases. -gr 7/20/2021 -->
+			<!-- is it me or is morale a bit... low? it seems like there's no hope for squarebracket or some shit. don't be surprised if i end up leaving the project -gr 8/3/2021 -->
 			<p class="my-0"><b>{{ __("By the squareBracket contributors") }}</b> · 2020-{{ 'now' | date('Y') }} | <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} | <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}</p>
 			<p class="my-0"><a href="about.php" class="me-1">{{ __("About") }}</a> <a class="me-1">{{ __("Terms") }}</a> <a class="me-1">{{ __("Guidelines") }}</a> <a class="me-1">{{ __("Contact") }}</a></p>
 			</div>
