--- a/templates/default/register.twig
+++ b/templates/default/register.twig
@@ -14,7 +14,7 @@ register page should be merged with login page on sbnext
 -gamerappa 7/10/2021 -->
   <form method="post" name="registerForm" id="registerForm" action="register.php">
     <img class="mb-2" src="/assets/logo_border_placeholder.png" alt="squareBracket" width="90">
-	<h3 class="mb-4 text-light">{{ __("Register") }}</h3>
+	<h3 class="mb-4 text-white">{{ __("Register") }}</h3>
 <form method="POST">
 	<div class="card">
 		<div class="card-body">
@@ -49,8 +49,8 @@ register page should be merged with login page on sbnext
 		</div>
 	</div>
 </div>
-	<p class="mt-2 text-light"><b>{{ __("You must be 13 years or older to register to squareBracket.") }}</b> <br>{{ __("Account passwords are hashed with bcrypt.") }}</p>
-	<p class="mt-5 mb-3 text-light">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
+	<p class="mt-2 text-white"><b>{{ __("You must be 13 years or older to register to squareBracket.") }}</b> <br>{{ __("Account passwords are hashed with bcrypt.") }}</p>
+	<p class="mt-5 mb-3 text-white">{{ __("By squareBracket contributors") }} · 2020-{{ 'now' | date('Y') }}</p>
 </form>
 </main>
 {% if hcaptcha_sitekey %}
