--- a/templates/default/user.twig
+++ b/templates/default/user.twig
@@ -23,7 +23,7 @@
 		<div class="container py-4">
 			<div class="row">
 				<div class="col-md-10">
-					<img class="float-start rounded me-3" src="{{ profile_image(user.username) }}" width="150" alt="pfp">
+					<img class="float-start rounded-circle me-3" src="{{ profile_image(user.username) }}" width="150" alt="pfp">
 					<h1 class="align-top fw-bold mb-0">
 						{{ user.display_name }}{% if user.u_flags == 1 %}<svg data-bs-toggle="tooltip"
 							data-bs-placement="top" title="{{ __("Checkmarked") }}"
