--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -139,6 +139,9 @@
 			</ul>
 		</div>
 	</nav>
+	<div class="alert alert-info rounded-0 py-1 text-center" role="alert">
+	  There appears to be some slowdowns happening on squareBracket. We checked, it's not a DDoS attack. It appears the server has some internal problems that's out of our reach. Morale is currently low... we're sorry...
+	</div>
 	</div>
 	{% block precontent %}{% endblock %}
 	<div class="container">
