--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -58,22 +58,7 @@
 		{% endif %}
 		<hr/>
 		<h3>{{ __("News and updates") }}</h3>
-		<p>Hello people. This is Gamerappa. We at squareBracket are not sure about what to do with squareBracket. 
-		No, we won't be shutting it down, that's dumb. We simply just don't know what to do with the website. 
-		Right now, this is a generic video sharing site that barely has any features and that has no advantages
-		compared to YouTube or even SubRocks. I was considering adding features that could expand
-		squareBracket to be <i>more</i> than a video sharing website. But i'm not even sure if that's a good
-		idea. Like what to add, art stuff? a forum? I'm simply not even sure about if those planned new features
-		are even a good idea... 😕</p>
-		<p class="blockquote-footer">{{ __("Gamerappa") }}</p>
-		<figure>
-		  <blockquote class="blockquote">
-		    <p>I don't feel there's a focus or common goal. like, we've just been switching back and forth between what should be the squarebracket frontend. and what should squarebracket be? should it just be a site for people upload shitposts onto or should it become an actual serious video sharing site people would be willing to use?</p>
-		  </blockquote>
-		  <figcaption class="blockquote-footer">
-		    Sublayer/Roller, on <cite title="Gamerappa's direct messages">Gamerappa's direct messages</cite>
-		  </figcaption>
-		</figure>
+		<p>{{ __("There are currently no updates.") }}</p>
 		<hr/>
 		<h3>{{ __("Featured videos") }}</h3>
 		{% for video in featuredVideos %}
