--- a/templates/default/upload.twig
+++ b/templates/default/upload.twig
@@ -40,7 +40,7 @@ enctype="multipart/form-data">
 	</div>
 	<div class="col-4">
 <div class="card">
-  <h5 class="card-header">{{ __("Upload Guidelines") }}</h5>
+  <h5 class="card-header">{{ __("Upload Guideines") }}</h5>
   <div class="card-body">
     <p class="card-text">{{ __("Please, for god sakes, do not upload anything related to logos or cartoons meant for children. The viewer-base of those videos indirectly caused the downfall of the Gamerappa YouTube channel.") }}</p>
     <a href="https://studio.youtube.com/" class="btn btn-secondary">{{ __("Upload anyways") }}</a>
