--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -39,6 +39,7 @@ $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base;
 $h6-font-size: $font-size-base * 0.85;
 $body-bg: #e9eaec;
+$input-bg: $white;
 $indigo-color:	$indigo;
 $teal-color:	$teal;
 $orange-color:	$orange;
