--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -4,22 +4,28 @@
 	<meta charset="utf-8">
 	<title>sbNext</title>
 	<link rel="stylesheet" href="/assets/bs-finalium.css">
+	<style>
+	.bi {
+    display: inline-block;
+    vertical-align: -.125em;
+	}
+	</style>
 	{% block customcss %}{% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">sbNext</a>
+    <a class="navbar-brand" href="index.php">sbNext</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="index.php">{{ icon('circle-fill', 16) }} Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">{{ icon('circle-fill', 16) }} Videos</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
