--- a/templates/new/components/videobox.twig
+++ b/templates/new/components/videobox.twig
@@ -1,14 +1,14 @@
 <div class="card" style="margin-bottom:4px">
 	<div class="card-body">
 		<div class="row">
-			<div class="col col-4">
+			<div class="col-4">
 				<a href="watch.php?v={{ data.video_id }}&frontend=new">
 					<div class="card card-info">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
 				</a>
 			</div>
-			<div class="col col-8">
+			<div class="col-8">
 				<h3><a href="watch.php?v={{ data.video_id }}&frontend=new">{{ data.title }}</a></h3>
 				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}	&bull;
 				<span class="text-muted">{{ data.time | relative_time }}</span></p>
