--- a/templates/new/_layout.twig
+++ b/templates/new/_layout.twig
@@ -7,7 +7,8 @@
 	<style>
 	.bi {
     display: inline-block;
-    vertical-align: -.125em;
+    margin-top: -0.2em;
+	vertical-align: middle;
 	}
 	</style>
 	{% block customcss %}{% endblock %}
@@ -15,31 +16,20 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="index.php">sbNext</a>
+    <a class="navbar-brand" href="index.php">
+		<img src="/assets/sbnext/placeholder.png" class="bi" height="24">
+		sbNext
+	</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="index.php">{{ icon('circle-fill', 16) }} Home</a>
+          <a class="nav-link" href="index.php">{{ icon('circle-fill', 24) }} Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{ icon('circle-fill', 16) }} Videos</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="#">{{ icon('circle-fill', 24) }} Videos</a>
         </li>
       </ul>
       <form class="d-flex">
