--- a/templates/new/index.twig
+++ b/templates/new/index.twig
@@ -2,12 +2,19 @@
 	{% block content %}
 <div class="row">
 	<div class="col-8">
-		<h1>Recently uploaded to squareBracket</h1>
-		{% for video in videos %}
-			{{ video_box(video) }}
-		{% else %}
-			<p>{{ __("No uploaded videos.") }}</p>
-		{% endfor %}
+	<div class="p-2 mb-4 bg-light rounded-3">
+	  <div class="container-fluid py-5">
+		<h1 class="fw-bold">Welcome to squareBracket</h1>
+		<p class="col-md-8 fs-4">I can't believe it's not PokTube</p>
+		<button class="btn btn-primary btn-lg" type="button">Example button</button>
+	  </div>
+    </div>
+	<h1>Recently uploaded to squareBracket</h1>
+	{% for video in videos %}
+		{{ video_box(video) }}
+	{% else %}
+		<p>{{ __("No uploaded videos.") }}</p>
+	{% endfor %}
 	</div>
 	<div class="col-4">
 		<div class="card" style="margin-bottom:4px">
