--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -2,14 +2,45 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}{% endblock %}</title>
-	<link rel="stylesheet" href="/assets/proto.css">
+	<title>{% block title %}{% endblock %} - squareBracket </title>
+	<link rel="stylesheet" id="bootstrap" href="assets/bs-finalium.css" type="text/css">
+	<style>
+	.bi {
+    display: inline-block;
+    margin-top: -0.2em;
+	vertical-align: middle;
+	}
+	</style>
 	{% block customcss %}{% endblock %}
 </head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+  <div class="container">
+    <a class="navbar-brand" href="index.php">
+		<img src="/assets/sbnext/placeholder.png" class="bi" height="24">
+		squareBracket
+	</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="index.php">{{ icon('circle-fill', 24) }} Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{ icon('circle-fill', 24) }} Videos</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
 <body>
-<h1 class="pagetitle">{{ block('title') }}</h1>
-<p class="subtitle">squareBracket</p>
-	<div id="content">
+	<div class="container">
+	<h1>{{ block('title') }}</h1>
 		{% block content %}{% endblock %}
 	</div>
 </body>
