--- a/templates/prototype/index.twig
+++ b/templates/prototype/index.twig
@@ -1,4 +1,5 @@
 {% extends "_layout.twig" %}
+{% block title %}Main page{% endblock %}
 	{% block content %}
 <div class="row">
 	<div class="col-8">
@@ -6,7 +7,8 @@
 	  <div class="container-fluid py-5">
 		<h1 class="fw-bold">Welcome to squareBracket</h1>
 		<p class="col-md-8 fs-4">I can't believe it's not PokTube</p>
-		<button class="btn btn-primary btn-lg" type="button">Example button</button>
+		<a class="btn btn-primary btn-lg" href="register.php">Register {{ icon('caret-right-fill', 16) }}</a>
+		<big>Already have an account? <a href="login.php">Sign in</a></big>
 	  </div>
     </div>
 	<h1>Recently uploaded to squareBracket</h1>
@@ -17,31 +19,11 @@
 	{% endfor %}
 	</div>
 	<div class="col-4">
-		<div class="card" style="margin-bottom:4px">
-			<h3 class="small-margin">Login (non-functional)</h3>
-			<form class="form-horizontal">
-				<div class="control-group">
-					<div class="controls">
-						<input type="text" id="inputEmail" placeholder="Username">
-					</div>
-				</div>
-				<div class="control-group">
-					<div class="controls">
-						<input type="password" id="inputPassword" placeholder="Password">
-					</div>
-				</div>
-				<div class="control-group">
-					<div class="controls text-end">
-						<button type="submit" class="btn btn-secondary">Sign in</button>
-					</div>
-				</div>
-			</form>
-			<hr>
-			<div class="text-center">Don't have an account? <a href="register.php" class="btn btn-small btn-primary">Sign up</a></div>
-		</div>
-		<h3>News and updates</h3>
-		<p class="text-danger">URGENT: If you have used AIM Phoenix in the past 3.5-ish years, then please note that there's a huge chance your account infomation has been leaked in a database leak that also affected Escargot. If your Phoenix and squareBracket passwords are indentical. CHANGE IT NOW.</p>
-		<p>Due to revivals now having a lower reputation, we have decided to scrap 2006L and replace it with sbNext. Also, we're most likely not going to bother importing any PokTube videos onto squareBracket.</p>
+		<h3>What's new?</h3>
+		<p>Welcome to the brand new squareBracket!
+		We've heard it, the old layout sucked so
+		we have redesigned squareBracket to have
+		a better user interface.</p>
 	</div>
 </div>
 <br><br>
