--- a/templates/default/_layout.twig
+++ b/templates/default/_layout.twig
@@ -30,7 +30,7 @@
 	<meta name="msapplication-TileColor" content="#2d89ef">
 	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	<meta name="theme-color" content="#0065d8">
-	<title>{% block title %}{% endblock %} - squareBracket Beta 1.1</title>
+	<title>{% block title %}{% endblock %} - squareBracket Beta 1.9</title>
 </head>
 <style>
 	.bi {
@@ -144,7 +144,7 @@
 	<div class="container">
 		{% block content %}{% endblock %}
 	</div>
-		<div class="p-3">
+		<footer class="p-3">
 			<div class="container">
 			<div class="card">
 			<div class="card-body">
