half-ass import upload.twig from original layout

--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -28,7 +28,7 @@
           <a class="nav-link" href="index.php">{{ icon('house-door', 24) }} Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="browse.php">{{ icon('film', 24) }} Videos</a>
+          <a class="nav-link" href="browse.php">{{ icon('collection-play', 24) }} Videos</a>
         </li>
       </ul>
 	  <div class="navbar-nav">
