--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -16,7 +16,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container">
-    <a class="navbar-brand" href="index.php">
+    <a class="navbar-brand me-2" href="index.php">
 		<img src="/assets/logo.png" class="bi" height="24">
 	</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,30 +30,51 @@
         <li class="nav-item">
           <a class="nav-link" href="browse.php">{{ icon('collection-play', 24) }} Videos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{ icon('music-note-beamed', 24) }} Music</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">{{ icon('easel', 24) }} Art</a>
+        </li>
       </ul>
 	  <div class="navbar-nav">
-      <form class="d-flex">
+      <form class="d-flex pe-2">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-secondary" type="submit">Search</button>
       </form>
-	  <li class="nav-item">
-        <a class="nav-link" href="upload.php">{{ icon('upload', 24) }} Upload</a>
-      </li>
 	  {% if logged_in %}
+	  <li class="nav-item">
+        <a class="nav-link" href="upload.php">{{ icon('upload', 24) }}</a>
+      </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		  <img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded-circle bi" width="24" height="24"> {{current_user.username}}</a>
-		  	<ul class="dropdown-menu" aria-labelledby="userDropdown">
-				<li><a class="dropdown-item" href="#">{{ icon('circle', 24) }} My profile</a></li>
-				<li><a class="dropdown-item" href="#">{{ icon('circle', 24) }} Studio</a></li>
-				<li><a class="dropdown-item" href="#">{{ icon('circle', 24) }} Appearance</a></li>
-				<li><a class="dropdown-item" href="#">{{ icon('circle', 24) }} Settings</a></li>
+		  <img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded bi" width="24" height="24"></a>
+		  	<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+				<div class="p-2 mb-2 bg-light border-bottom">
+				<div class="row">
+					<div class="col-5">
+					<img src="{{ profile_image(current_user.username) }}" alt="{{ current_user.username }}" class="rounded w-100 bi"></a>
+					</div>
+					<div class="col-7 ps-0">
+						<p>@{{current_user.username}}</p>
+					</div>
+				</div>
+				</div>
+				<li><a class="dropdown-item" href="user.php?name={{ current_user.username }}">{{ icon('person-square', 16) }} My profile</a></li>
+				<li><a class="dropdown-item" href="#">{{ icon('gear', 16) }} Studio</a></li>
+				<li><a class="dropdown-item" href="#">{{ icon('palette2', 16) }} Appearance</a></li>
+				<li><a class="dropdown-item" href="settings.php">{{ icon('sliders', 16) }} Settings</a></li>
 				<li><hr class="dropdown-divider"></li>
-				<li><a class="dropdown-item" href="#">{{ icon('circle', 24) }} Sign off</a></li>
+				<li><a class="dropdown-item" href="logout.php">{{ icon('door-open', 16) }} Sign out</a></li>
 				<li><hr class="dropdown-divider"></li>
-				<li><a class="dropdown-item" href="#">{{ icon('circle', 24) }} Send feedback</a></li>
+				<li><a class="dropdown-item" href="#">{{ icon('chat-left-text', 16) }} Send feedback</a></li>
 			</ul>
         </li>
+	  {% else %}
+	  <div class="d-grid gap-2 d-md-block">
+		<a href="login.php" class="btn btn-primary me-md-1">{{ __("Login") }}</a>
+		<a href="register.php" class="btn btn-secondary">{{ __("Register") }}</a>
+	  </div>
 	  {% endif %}
 	  </div>
     </div>
