--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -44,7 +44,7 @@
       </form>
 	  {% if logged_in %}
 	  <li class="nav-item">
-        <a class="nav-link" href="upload.php">{{ icon('upload', 24) }}</a>
+        <a class="nav-link" href="upload_start.php">{{ icon('upload', 24) }}</a>
       </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
