--- a/templates/prototype/upload_part1.twig
+++ b/templates/prototype/upload_part1.twig
@@ -61,7 +61,7 @@
         </div>
         <h2>{{ __("Video") }}</h2>
         <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link">
+        <a href="upload.php" class="icon-link">
           {{ __("Upload video") }}
           {{ icon('chevron-right', 16) }}
         </a>
